--- a/.github/workflows/test1.yml
+++ b/.github/workflows/test1.yml
@@ -11,6 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
+      matrix:
+        python-version: [3.8]
 
     steps:
       - uses: actions/checkout@v2
@@ -18,26 +20,48 @@ jobs:
           submodules: 'true'
 
       - name: Install CMake
-        run: if [ `builtin type -p cmake` ]; then echo cmake already installed; else sudo apt-get install cmake; fi
+        run: |
+          if [ `builtin type -p cmake` ]; then echo cmake already installed; else sudo apt-get install cmake; fi
+          cmake --version
 
-      - name: Test that cmake works
+      - name: Test that cmake works as a shell
         shell: cmake -P {0}
-        run: message(STATUS "Start")
+        run: message(STATUS "Cmake ran")
 
       - name: Install Ninja
-        run: if [ `builtin type -p ninja` ]; then echo ninja already installed; else sudo apt-get install ninja-build; fi
+        run: |
+          if [ `builtin type -p ninja` ]; then echo ninja already installed; else sudo apt-get install ninja-build; fi
+          ninja --version
 
-      - name: Install pytest
-        run: if [ `builtin type -p pytest` ]; then echo pytest already installed; else sudo apt-get install python-pytest; fi
+      - name: Setup python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
 
-      - name: Test that pytest works
+      - name: Cache Python
+        id: cache
+        uses: actions/cache@v2
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-python-${{ hashFiles('requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-python-
+            ${{ runner.os }}-
+
+      - name: Install python
+        if: steps.cache.outputs.cache-hit != 'true'
+        #if: steps.cache-hit != 'true'
+        #if: cache-hit != 'true'
+        run: |
+          echo "**** cache was NOT true ****"
+          python -m pip install --upgrade pip
+          pip install setuptools pytest
+          pip --version
+          pytest --version
+          pip install -r requirements.txt
+
+      - name: Test pytest
         run: pytest --version
-
-     #- name: Install python3
-     #  run: if [ `builtin type -p python3` ]; then echo python3 already installed; else sudo apt-get install python3; fi
-
-     #- name: Install pytest
-     #  run: if [ `builtin type -p pytest` ]; then echo pytest already installed; else pip install -U pytest; fi
 
       - name: Configure
         run: cmake -S .  -B build -D CMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }} -G Ninja
@@ -48,4 +72,4 @@ jobs:
       - name: Run tests
         run: |
           pip install -e .
-          pytest tests
+          python -m pytest tests
