Try adding python-version to key
Previous change didn't work as python 3.6 loaded the old cache so try
adding the python-version as part of the key.

I believe this will work first time, but probably not the second because
python 3.8 failed in "Test pytest", there was no pytest.

Add `echo PATH=$PATH` to see how PATH differs when working and non-working.

Add `which xxx` to see where python, pytest and pip are found when it
does work.

--- a/.github/workflows/test1.yml
+++ b/.github/workflows/test1.yml
@@ -43,7 +43,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ~/.cache/pip
-          key: ${{ runner.os }}-python-${{ hashFiles('requirements.txt') }}
+          key: ${{ runner.os }}-python-${{ matrix.python-version }}-${{ hashFiles('requirements.txt') }}-x
           restore-keys: |
             ${{ runner.os }}-python-
             ${{ runner.os }}-
@@ -59,9 +59,17 @@ jobs:
           pip --version
           pytest --version
           pip install -r requirements.txt
+          which python
+          which pytest
+          which pip
 
       - name: Test pytest
-        run: pytest --version
+        run: |
+          echo PATH=$PATH
+          which python
+          which pytest
+          which pip
+          pytest --version
 
       - name: Configure
         run: cmake -S .  -B build -D CMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }} -G Ninja
