Change cache key to -1
This should create a new cache.

--- a/.github/workflows/test1.yml
+++ b/.github/workflows/test1.yml
@@ -43,7 +43,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ~/.cache/pip
-          key: ${{ runner.os }}-python-${{ matrix.python-version }}-${{ hashFiles('requirements.txt') }}
+          key: ${{ runner.os }}-python-${{ matrix.python-version }}-${{ hashFiles('requirements.txt') }}-1
           restore-keys: |
             ${{ runner.os }}-python-
             ${{ runner.os }}-
