--- a/.github/workflows/test1.yml
+++ b/.github/workflows/test1.yml
@@ -44,7 +44,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ~/.cache/pip
-          key: ${{ runner.os }}-python-${{ matrix.python-version }}-${{ hashFiles('requirements.txt') }}-2
+          key: ${{ runner.os }}-python-${{ matrix.python-version }}-${{ hashFiles('requirements.txt') }}-3
           restore-keys: |
             ${{ runner.os }}-python-
             ${{ runner.os }}-
@@ -52,17 +52,19 @@ jobs:
       - name: Install python
         if: steps.cache.outputs.cache-hit != 'true'
         run: |
-          echo "**** cache was NOT true ****"
+          echo "**** cache-hit was NOT true INSTALL ****"
           python -m pip install --upgrade pip
           pip install setuptools pytest
           pip --version
           pytest --version
           pip install -r requirements.txt
           echo PATH=$PATH
-          ls -al /opt/hostedtoolcache/Python/3.6.12/x64/bin/p*
-          ls -al /opt/hostedtoolcache/Python/3.6.12/x64/lib/python3.6/site-packages/p*
-          ls -al /opt/hostedtoolcache/Python/3.8.6/x64/bin/p*
-          ls -al /opt/hostedtoolcache/Python/3.8.6/x64/lib/python3.8/site-packages/p*
+          ls -al /opt/hostedtoolcache/Python/3.6.12/x64/bin/python
+          ls -al /opt/hostedtoolcache/Python/3.6.12/x64/bin/pytest
+          ls -al /opt/hostedtoolcache/Python/3.6.12/x64/bin/pip
+          ls -al /opt/hostedtoolcache/Python/3.8.6/x64/bin/python
+          ls -al /opt/hostedtoolcache/Python/3.8.6/x64/bin/pytest
+          ls -al /opt/hostedtoolcache/Python/3.8.6/x64/bin/pip
           which python
           which pytest
           which pip
@@ -70,13 +72,12 @@ jobs:
       - name: Test pytest
         run: |
           echo PATH=$PATH
-          ls -al /opt/hostedtoolcache/Python/3.6.12/x64/bin/p*
-          ls -al /opt/hostedtoolcache/Python/3.6.12/x64/lib/python3.6/site-packages/p*
-          ls -al /opt/hostedtoolcache/Python/3.8.6/x64/bin/p*
-          ls -al /opt/hostedtoolcache/Python/3.8.6/x64/lib/python3.8/site-packages/p*
-          #which python
-          #which pytest
-          #which pip
+          ls -al /opt/hostedtoolcache/Python/3.6.12/x64/bin/python
+          ls -al /opt/hostedtoolcache/Python/3.6.12/x64/bin/pytest
+          ls -al /opt/hostedtoolcache/Python/3.6.12/x64/bin/pip
+          ls -al /opt/hostedtoolcache/Python/3.8.6/x64/bin/python
+          ls -al /opt/hostedtoolcache/Python/3.8.6/x64/bin/pytest
+          ls -al /opt/hostedtoolcache/Python/3.8.6/x64/bin/pip
           pytest --version
 
       - name: Configure
